carrousel service page done

--- a/src/app/website/components/about/cards-vision-mision/cards-vision-mision.component.html
+++ b/src/app/website/components/about/cards-vision-mision/cards-vision-mision.component.html
@@ -7,7 +7,10 @@
                 ">
                 {{ card.title| translate:translateService.GetLang }}
             </p>
-            <p>
+            <p class="
+                font__size--b2
+                font__weight--medium
+                ">
                 {{ card.description | translate:translateService.GetLang }}
             </p>
 
