--- a/src/app/website/components/home/services-contract/services-contract.component.html
+++ b/src/app/website/components/home/services-contract/services-contract.component.html
@@ -41,7 +41,7 @@
                 }
             </ul>
             <div class="btns__container">
-                <a class="btn" routerLink="/services" (click)="scrollTopService.scrollToTop()">
+                <a class="btn btn--primary" routerLink="/services" (click)="scrollTopService.scrollToTop()">
                     {{ 'button.services' | translate:translateService.GetLang }}
                 </a>
             </div>
