--- a/src/app/website/components/service-page/card-other-services/card-other-services.component.html
+++ b/src/app/website/components/service-page/card-other-services/card-other-services.component.html
@@ -18,7 +18,7 @@
                 </p>
             }
     
-            <img [src]="'../../../../../assets/theme/'+localStorageService.GetMode+'/img/image_edited.webp'"
+            <img [src]="'../../../../../assets/theme/'+localStorageService.GetMode+'/icon/services/icon-'+service.icon+'.svg'"
                 alt=""
             >
     
