--- a/src/app/website/components/services/card-service/card-service.component.html
+++ b/src/app/website/components/services/card-service/card-service.component.html
@@ -24,7 +24,7 @@
                     </p>
                 }
                 <div class="card__body">
-                    <img [src]="'../../../../assets/theme/'+localStorageService.GetMode+'/img/'+service.img+'.webp'" alt="">
+                    <img [src]="'../../../../assets/theme/'+localStorageService.GetMode+'/icon/services/icon-'+service.icon+'.svg'" alt="">
                     
                     <div class="txt__container">
                         <p class="
