--- a/src/app/website/pages/about/about.component.html
+++ b/src/app/website/pages/about/about.component.html
@@ -3,11 +3,9 @@
 
         <div class="block__left">
             <img 
-            [src]="'../../../../assets/theme/'+localStorageService.GetMode+'/img/image_edited.webp'" 
+            [src]="'../../../../assets/theme/'+localStorageService.GetMode+'/img/about.jpg'" 
             class="img"
             alt="clean tools">
-
-            <div class="block__right--bg"></div>
 
         </div>
 
