--- a/src/app/website/components/services/card-service/card-service.component.css
+++ b/src/app/website/components/services/card-service/card-service.component.css
@@ -23,6 +23,8 @@
             img {
                 width: 100%;
                 height: fit-content;
+                padding: var(--spacing-md);
+                box-sizing: border-box;
             }
 
             .card__body {
